--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/hanbin9775/express_study#readme",
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "body-parser": "~1.14.2",
+    "express-session": "~1.13.0"
   }
 }
